--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Homepage:
 
 Package: skindesigner-skin-blackholefrodo
 Architecture: all
-Depends: ${misc:Depends}, vdr-plugin-skindesigner (>= 0.1.2~), fonts-ds-digital
+Depends: ${misc:Depends}, vdr-plugin-skindesigner (>= 0.1.3~), fonts-ds-digital
+Recommends: vdr-plugin-weatherforecast
 Description: skin blackholefrodo for skindesigner
 
